force-app/main/default/objects/Treatment__c/Treatment__c.object-meta.xml
<CustomObject>
    <description>Represents a medical treatment or consultation type offered by the clinic.</description>
    <label>Treatment</label>
    <nameField>
        <label>Treatment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treatments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>