force-app/main/default/objects/Treatment__c/fields/Treatment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Fee__c</fullName>
    <description>Price charged for the treatment.</description>
    <label>Treatment Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>